2004-11-23  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* demos/chat.tcl: Sample Tk chat app using multicast udp.

2004-11-22  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* TAG:          ====  tcludp-1_0_6 ====
	
	* win/makefile.vc: Improved the win build system.
	* demos/*: Added a few sample applications, demos of broadcast, 
	multicast and normal operation.
	* tools/mpexpand.tcl: Added app for generating documentation.

	* generic/udp_tcl.h: Done some testing with multicast and have
	* generic/udp_tcl.c: rationalised the fconfigure/udp_conf interfaces
	a bit better. The -ttl option will set the multicast ttl if the
	socket has been added to a multicast group. 
	Now maintains a list of groups so that this can be inspected and
	when the socket is closed we will call mcastdrop for each item.
	
	* generic/udp_tcl.h: Fixed the -ttl option for Windows.
	* generic/udp_tcl.c: Added support for setting and retrieving the
	TTL option on the socket. The default is specified by the system
	but can be set for individual sockets. 

2004-02-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* generic/udp_tcl.c: Followed up a suggestion in patch #794072 to
	support udp broadcast packets. This can be queried/enabled using
	fconfigure $s -broadcast ?1|0?

	* generic/udp_tcl.c: Fixes for some errors in the Win32 code
	in udpClose provided in patch #820255.

	* all:        INCREMENTED VERSION TO 1.0.6

	* generic/udp_tcl.c: Applied fix from bug #833700 to close a
	memory leak in UDP_CheckProc.

	* Makefile.in: Fixed to build in directories other than the top
	of the source tree.

	* generic/udp_tcl.c: Applied the patch from bug #810572 which
	fixes a memory leak in udp_open - from D. Richard Hipp?

	* generic/udp_tcl.h: Fix for missing define WIN32 sometimes.
	
	* win/makefile.vc:  Added the standard windows nmake makefiles
	* win/nmakehlp.c:   from the sampleextension project.
	* win/rules.vc:     Visual Studio project updated as a Makefile
	* win/tcludp.dsp:   project.
